Add /galaxy endpoint to list all clusters
